0.1.7 (unreleased)

   - replaced 'echo' parameter of the constructor with a generic **kw
     parameter in order to provide full parameter support for
     create_engine. Optional arguments passed to the constructur are
     passed directly to create_engine()

   - fixed the documentation a bit

   - added registerMapper() to BaseWrapper class

   - registerSQLAlchemyWrapper() now defers the registration until
     the Wrapper is used first when calling getSQLAlchemyWrapper() 

   - the 'name' parameter of Model.add() now supports schemas (if
     available). E.g. when using Postgres you can reference as
     table within a different schema through '<schema>.<tablename>'.

 
0.1.6 (28.03.2007)

   - fixed a bug in registerSQLAlchemyWrapper

0.1.5 (28.03.2007)
  
   - registerSQLAlchemyWrapper() should now work with Zope 2.8-2.10

   - abort() was defined twice inside the DataManager class
 
0.1.4 (21.03.2007)

   - the Model class now behave (where needed) as a sorted
     dictionary. Its items() method must returned all items
     in insertion order.

0.1.3 (20.03.2007)

   - added getMappers() convenience method

   - the Zope wrapper uses SessionTransactions in order to be able
     to flush() as session with a transaction in order to read
     row previously inserted within the same transaction


0.1.2 (unreleased)

   - fixed class hierarchy issues with Postgres wrapper classes


0.1.1 (unreleased)

   - fixed setup.py

0.1 (18.03.2007)

   - initial version