@@ -35,7 +35,7 @@ class Model(dict):
             self.add(**d)
 
 
-    def add(self, name, table=None, mapper_class=None, relations=None, autodetect_relations=False):
+    def add(self, name, table=None, mapper_class=None, relations=None, autodetect_relations=False, table_name=None):
         """ 'name'  -- name of table (no schema support so far!)
 
             'table' -- a sqlalchemy.Table instance (None, for autoloading)
@@ -47,7 +47,10 @@ class Model(dict):
 
             'autodetect_relations' -- try to autodetect the relationships between tables
                            and auto-construct the relation properties of the mapper if
-                           'relations is omitted'
+                           'relations' is omitted (set to None)
+
+            'table_name' -- optional full name of a table (e.g. 'someschema.sometable') if
+                            you want to use 'name' as alias for the table.
         """
 
         if table is not None and not isinstance(table, sqlalchemy.Table):
@@ -70,7 +73,8 @@ class Model(dict):
                       'table' : table,
                       'relations' : relations,
                       'mapper_class' : mapper_class,
-                      'autodetect_relations' : autodetect_relations
+                      'autodetect_relations' : autodetect_relations,
+                      'table_name' : table_name,
                      }
 
 
